Fix state (visible) for table.

--- a/web/assets/states.styl
+++ b/web/assets/states.styl
@@ -13,6 +13,9 @@ states(states...)
             tr.visible-{state}
                 display table-row
 
+            table.visible-{state}
+                display table
+
             .btn.visible-{state}
                 display inline-block
 
